syntax = "proto3";

package auth;

service AuthService {
  rpc Login (LoginRequest) returns (AuthResponse) {}
  rpc Register (RegisterRequest) returns (AuthResponse) {}
  rpc RefreshToken (RefreshTokenRequest) returns (AuthResponse) {}
  rpc GetProfile (GetProfileRequest) returns (GetProfileResponse) {}
}

message LoginRequest {
  string email = 1;
  string password = 2;
  map<string, string> metadata = 3; // optional metadata
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string username = 3;
  string password = 4;
  map<string, string> metadata = 5; // optional metadata
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message GetProfileRequest {
  string userId = 1;
}

message GetProfileResponse {
  AuthUser user = 1;
  string message = 2;
}

message TokenMetadata {
  int64 exp = 1;
  int64 iat = 2;
  string jti = 3;
  string ssid = 4;
}

message TokenResponse {
  TokenMetadata metadata = 1;
  string token = 2;
}

// removed TokenPair in favor of flat fields in AuthResponse

message AuthUser {
  string id = 1;
  string email = 2;
  string username = 3;
  bool isActive = 4;
  string firstName = 5;
  string fullName = 6;
  string lastName = 7;
  string createdAt = 8;
  string updatedAt = 9;
}

message AuthResponse {
  TokenResponse accessToken = 1;
  TokenResponse refreshToken = 2;
  string ssid = 3;
  AuthUser user = 4;
}


